feat: struttura della pagina

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="racconto della mia esperienza di viaggio a Londra">
+    <title>Il mio viaggio a Londra</title>
 </head>
 <body>
-    
+    <!-- sezione immagini 1 -->
+    <section></section>
+    <!-- fine sezione immagini 1  -->
+
+    <!-- sezione spese -->
+    <section></section>
+    <!-- fine sezione spese -->
+
+    <!-- sezione cose da fare -->
+    <section></section>
+    <!-- fine sezione cose da fare -->
+
+    <!-- sezione info -->
+    <section></section>
+    <!-- fine sezione info -->
+
+    <!-- sezione immagini 2 -->
+    <section></section>
+    <!-- fine sezione immagini 2 -->
 </body>
+
 </html>
