feat: sezione immagini 1 completata

--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
     <title>Il mio viaggio a Londra</title>
 </head>
 <body>
-    <!-- sezione immagini 1 -->
-    <section></section>
-    <!-- fine sezione immagini 1  -->
+    <main>
+     <!-- sezione immagini 1 -->
+     <section>
+        <h1>Il mio viaggio a Londra</h1>
+        <img src="./img/londra1.jpg" alt="orologio big bang di londra">
+        <img src="./img/londra2.jpg" alt="foto del big bang visto da lontano">
+        <img src="./img/londra3.jpg" alt="big bang di londra dalla vista del ponte">
+     </section>
+     <!-- fine sezione immagini 1  -->
+      <hr>
 
-    <!-- sezione spese -->
-    <section></section>
-    <!-- fine sezione spese -->
+     <!-- sezione spese -->
+     <section></section>
+     <!-- fine sezione spese -->
 
-    <!-- sezione cose da fare -->
-    <section></section>
-    <!-- fine sezione cose da fare -->
+     <!-- sezione cose da fare -->
+     <section></section>
+     <!-- fine sezione cose da fare -->
 
-    <!-- sezione info -->
-    <section></section>
-    <!-- fine sezione info -->
+     <!-- sezione info -->
+     <section></section>
+     <!-- fine sezione info -->
 
-    <!-- sezione immagini 2 -->
-    <section></section>
-    <!-- fine sezione immagini 2 -->
+     <!-- sezione immagini 2 -->
+     <section></section>
+     <!-- fine sezione immagini 2 -->
+    </main>
 </body>
 
 </html>
