--- a/index.html
+++ b/index.html
@@ -19,9 +19,46 @@
       <hr>
 
      <!-- sezione spese -->
-     <section></section>
-     <!-- fine sezione spese -->
+     <section> 
+        <h2>Le mie spese</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
 
+            <tbody>
+                <tr>
+                   <td>1</td>
+                   <td>Biglietto Aereo</td> 
+                   <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+            </tbody>
+
+            <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360€</td>
+                </tr>
+            </tfoot>
+        </table>
+     </section>
+     <!-- fine sezione spese -->
+     <hr>
      <!-- sezione cose da fare -->
      <section></section>
      <!-- fine sezione cose da fare -->
