feat: sezione cose da fare completata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="racconto della mia esperienza di viaggio a Londra">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Il mio viaggio a Londra</title>
 </head>
 <body>
@@ -60,8 +61,17 @@
      <!-- fine sezione spese -->
      <hr>
      <!-- sezione cose da fare -->
-     <section></section>
+     <section>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la tower of London &#10007 </li>
+            <li>Visitare greenwich &#10003 </li>
+            <li>Ascoltare un artista di strada a Convent Garden &#10007</li>
+            <li>Mangiare il tipico fish and chips inglese &#10003 </li>
+        </ul>
+     </section>
      <!-- fine sezione cose da fare -->
+      <hr>
 
      <!-- sezione info -->
      <section></section>
