feat: sezione info utili completata

--- a/index.html
+++ b/index.html
@@ -74,8 +74,33 @@
       <hr>
 
      <!-- sezione info -->
-     <section></section>
+     <section>
+        <h3>Info utili</h3>
+        <ol>
+            <li> Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero polizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>
+                Hotel
+                <ul>
+                    <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                    <li><strong>indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo</li>
+            <ul>
+                <li><strong>Volo di Andata:</strong> YI234X, ore 9:30 da Milano Malpensa</li>
+                <li><strong>Volo di ritorno:</strong> YI2367X, ORE 18:30 da London Heathrow</li>
+            </ul>
+        </ol>
+
+     </section>
      <!-- fine sezione info -->
+      <hr>
 
      <!-- sezione immagini 2 -->
      <section></section>
